Desgin the website with basic grid

--- a/index.html
+++ b/index.html
@@ -7,162 +7,168 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    <div class="dashboard">
-        <div class="dash">
-            <img src="icons/" alt="dash" class="icon">
-            <p>Dashboard</p>
-        </div>
-        <div class="profile-container">
-            <div class="dash-option">
-                <img src="icons/" alt="" class="icon">
-                <p>Home</p>
+    <div class="container">
+        <div class="dash-container">
+            <div class="dash-option dash-profile">
+                <img src="icons/view-dashboard.svg" alt="dashboard" id="dash-logo">
+                <h1>Dashboard</h1>
             </div>
-            <div class="dash-option">
-                <img src="icons/" alt="profile" class="icon">
-                <p>Profile</p>
-            </div>
-            <div class="dash-option">
-                <img src="icons/" alt="messages" class="icon">
-                <p>Messages</p>
-            </div>
-            <div class="dash-option">
-                <img src="icons/" alt="history" class="icon">
-                <p>History</p>
-            </div>
-            <div class="dash-option">
-                <img src="icons/" alt="tasks" class="icon">
-                <p>Tasks</p>
-            </div>
-            <div class="dash-option">
-                <img src="icons/" alt="communities" class="icon">
-                <p>Communities</p>
-            </div>
-        </div>
-        <div class="settings-container">
-            <div class="dash-option">
-                <img src="icons/" alt="setting" class="icon">
-                <p>Setting</p>
-            </div>
-            <div class="dash-option">
-                <img src="icons/" alt="support" class="icon">
-                <p>Support</p>
-            </div>
-            <div class="dash-option">
-                <img src="icons/" alt="privacy" class="icon">
-                <p>Privacy</p>
-            </div>
-        </div>
-    </div>
 
-    <div class="header">
-        <div class="search-container">
-            <img src="icons/magnify.svg" alt="search" class="icon">
-            <div class="search-bar"></div>
-        </div>
-        <div class="account-container">
-            <img src="icons/" alt="notification-bell" class="icon">
-            <div class="profile-pic"></div>
-            <h3>One</h3>
-        </div>
-    </div>
+            <div class="profile-container">
+                <div class="dash-option">
+                    <img src="icons/home.svg" alt="home" class="icon">
+                    <p>Home</p>
+                </div>
+                <div class="dash-option">
+                    <img src="icons/account-details.svg" alt="profile" class="icon">
+                    <p>Profile</p>
+                </div>
+                <div class="dash-option">
+                    <img src="icons/message.svg" alt="messages" class="icon">
+                    <p>Messages</p>
+                </div>
+                <div class="dash-option">
+                    <img src="icons/clock-time-eight.svg" alt="history" class="icon">
+                    <p>History</p>
+                </div>
+                <div class="dash-option">
+                    <img src="icons/file-multiple.svg" alt="tasks" class="icon">
+                    <p>Tasks</p>
+                </div>
+                <div class="dash-option">
+                    <img src="icons/account-group.svg" alt="communities" class="icon">
+                    <p>Communities</p>
+                </div>
+            </div>
 
-    <div class="nav-bar">
-        <img src="icons/" alt="profile-pic" class="icon">
-        <h5>Hello, </h5>
-        <h3>One (@one)</h3>
-    </div> 
-
-    <div class="project-container">
-        <div class="cards">
-            <div class="card">
-                <h5>Hello</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci consequuntur ducimus facere dignissimos necessitatibus dolorem, pariatur praesentium facilis dicta nam dolor eligendi maiores consectetur! Est labore nobis numquam laborum fugiat?</p>
-                <div class="icon-container">
-                    <img src="" alt="" class="icon">
-                    <img src="" alt="" class="icon">
-                    <img src="" alt="" class="icon">
+            <div class="settings-container">
+                <div class="dash-option">
+                    <img src="icons/cog.svg" alt="setting" class="icon">
+                    <p>Setting</p>
                 </div>
-            </div>
-            <div class="card">
-                <h5>Bye</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae ea labore alias sed quibusdam magni fugit fugiat dolore provident est magnam praesentium cum omnis repellendus, veritatis sequi laboriosam. Eius, expedita.</p>
-                <div class="icon-container"><img src="" alt="" class="icon">
-                    <img src="" alt="" class="icon">
-                    <img src="" alt="" class="icon">
+                <div class="dash-option">
+                    <img src="icons/face-agent.svg" alt="support" class="icon">
+                    <p>Support</p>
                 </div>
-            </div>
-            <div class="card">
-                <h5>Huh?</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quas dolorem deleniti obcaecati inventore? Suscipit recusandae pariatur dolor alias libero molestiae saepe eaque dolorem, amet asperiores eligendi, distinctio quod. Nisi!</p>
-                <div class="icon-container">
-                    <img src="" alt="" class="icon">
-                    <img src="" alt="" class="icon">
-                    <img src="" alt="" class="icon">
-                </div>
-            </div>
-            <div class="card">
-                <h5>Wdym?</h5>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus, praesentium? Facere voluptatibus odit consequuntur, optio laudantium quos nostrum, ipsum eaque magni suscipit beatae similique tenetur, rem quibusdam nihil et ratione.</p>
-                <div class="icon-container">
-                    <img src="" alt="" class="icon">
-                    <img src="" alt="" class="icon">
-                    <img src="" alt="" class="icon">
-                </div>
-            </div>
-            <div class="card">
-                <h5>No</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel quasi dicta doloribus facilis dolor dolorem nostrum eius aliquam quas quibusdam. Architecto adipisci sint dolores distinctio qui beatae minus dicta hic?</p>
-                <div class="icon-container">
-                    <img src="" alt="" class="icon">
-                    <img src="" alt="" class="icon">
-                    <img src="" alt="" class="icon">
-                </div>
-            </div>
-            <div class="card">
-                <h5>Please...</h5>
-                <p>Lore</p>
-                <div class="icon-container">
-                    <img src="" alt="" class="icon">
-                    <img src="" alt="" class="icon">
-                    <img src="" alt="" class="icon">
+                <div class="dash-option">
+                    <img src="icons/security.svg" alt="privacy" class="icon">
+                    <p>Privacy</p>
                 </div>
             </div>
         </div>
-    </div>
-
-    <div class="announcement">
-        <div class="card">
-            <div>
-                <h5>Death</h5>
+        <div class="header">
+            <div class="search-container">
+                <img src="icons/magnify.svg" alt="search" class="icon">
+                <div class="search-bar"></div>
+            </div>
+            <div class="account-container">
+                <img src="icons/bell-ring.svg" alt="notification-bell" class="icon">
+                <div class="profile-pic type-one"></div>
+                <h3>One</h3>
+            </div>
+        </div>
+        <div class="nav-bar">
+            <div id="profile">
+                <div class="profile-pic type-two"></div>
+                <h4 id="greeting">Hello, </h4>
+                <h3 id="user-name">One (@one)</h3>
+            </div>
+            <div class="buttons">
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>
+            </div>
+        </div>
+        <div class="project-container">
+            <div class="cards">
+                <div class="card">
+                    <h5>Hello</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci consequuntur ducimus facere dignissimos necessitatibus dolorem, pariatur praesentium facilis dicta nam dolor eligendi maiores consectetur! Est labore nobis numquam laborum fugiat?</p>
+                    <div class="icon-container">
+                        <img src="icons/star-plus.svg" alt="bookmark" class="icon">
+                        <img src="icons/eye-plus.svg" alt="save" class="icon">
+                        <img src="icons/share.svg" alt="share" class="icon">
+                    </div>
+                </div>
+                <div class="card">
+                    <h5>Bye</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae ea labore alias sed quibusdam magni fugit fugiat dolore provident est magnam praesentium cum omnis repellendus, veritatis sequi laboriosam. Eius, expedita.</p>
+                    <div class="icon-container">
+                        <img src="icons/star-plus.svg" alt="bookmark" class="icon">
+                        <img src="icons/eye-plus.svg" alt="save" class="icon">
+                        <img src="icons/share.svg" alt="share" class="icon">
+                    </div>
+                </div>
+                <div class="card">
+                    <h5>Huh?</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quas dolorem deleniti obcaecati inventore? Suscipit recusandae pariatur dolor alias libero molestiae saepe eaque dolorem, amet asperiores eligendi, distinctio quod. Nisi!</p>
+                    <div class="icon-container">
+                        <img src="icons/star-plus.svg" alt="bookmark" class="icon">
+                        <img src="icons/eye-plus.svg" alt="save" class="icon">
+                        <img src="icons/share.svg" alt="share" class="icon">
+                    </div>
+                </div>
+                <div class="card">
+                    <h5>Wdym?</h5>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus, praesentium? Facere voluptatibus odit consequuntur, optio laudantium quos nostrum, ipsum eaque magni suscipit beatae similique tenetur, rem quibusdam nihil et ratione.</p>
+                    <div class="icon-container">
+                        <img src="icons/star-plus.svg" alt="bookmark" class="icon">
+                        <img src="icons/eye-plus.svg" alt="save" class="icon">
+                        <img src="icons/share.svg" alt="share" class="icon">
+                    </div>
+                </div>
+                <div class="card">
+                    <h5>No</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel quasi dicta doloribus facilis dolor dolorem nostrum eius aliquam quas quibusdam. Architecto adipisci sint dolores distinctio qui beatae minus dicta hic?</p>
+                    <div class="icon-container">
+                        <img src="icons/star-plus.svg" alt="bookmark" class="icon">
+                        <img src="icons/eye-plus.svg" alt="save" class="icon">
+                        <img src="icons/share.svg" alt="share" class="icon">
+                    </div>
+                </div>
+                <div class="card">
+                    <h5>Please...</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum architecto dolore nesciunt et, possimus quis soluta, doloribus dignissimos tempore dolorem similique saepe perferendis quo quos impedit pariatur optio enim quidem.</p>
+                    <div class="icon-container">
+                        <img src="icons/star-plus.svg" alt="bookmark" class="icon">
+                        <img src="icons/eye-plus.svg" alt="save" class="icon">
+                        <img src="icons/share.svg" alt="share" class="icon">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="announcement">
+            <div class="announcement-container">
+                <h4>Death</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque officia animi magni doloremque dignissimos eius quod, numquam voluptas excepturi dicta, est, corrupti sit architecto id. Recusandae perspiciatis temporibus omnis mollitia.</p>
             </div>
-            <div>
-                <h5 id="center-announcement">Ressuruciton</h5>
+            <div class="announcement-container">
+                <h4 id="center-announcement">Ressuruction</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam cupiditate hic, perferendis, eaque animi eligendi ad, labore architecto quia beatae numquam. Autem sed porro perferendis nesciunt vitae iusto quisquam tempore.</p>
             </div>
-            <div>
-                <h5>Reincarnation</h5>
+            <div class="announcement-container">
+                <h4>Reincarnation</h4>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus pariatur, commodi neque minima vitae similique vero tempore labore incidunt debitis nisi, exercitationem officiis dolor expedita itaque inventore, earum minus facilis?</p>
             </div>
         </div>
-    </div>
-
-    <div class="trending">
-        <div class="user">
-            <div class="profile-pic"></div>
-            <h5></h5>
-            <p></p>
-        </div>
-        <div class="user">
-            <div class="profile-pic"></div>
-            <h5></h5>
-            <p></p>
-        </div>
-        <div class="user">
-            <div class="profile-pic"></div>
-            <h5></h5>
-            <p></p>
+        <div class="trending">
+            <div class="user">
+                <div class="profile-pic type-one"></div>
+                <h5>One</h5>
+                <p>Died 5 years ago</p>
+            </div>
+            <div class="user">
+                <div class="profile-pic type-one"></div>
+                <h5>Two</h5>
+                <p>The chosen one</p>
+            </div>
+            <div class="user">
+                <div class="profile-pic type-one"></div>
+                <h5>Three</h5>
+                <p>The disgraced one</p>
+            </div>
         </div>
     </div>
 
 </body>
+</html>
